k8s/eas-fetcher.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-fetcher
  name: eas-fetcher-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eas-fetcher
  template:
    metadata:
      labels:
        app: eas-fetcher
    spec:
      containers:
      - name: eas-fetcher-pod
        image: index.docker.io/robbilie/eas:eas-node
        imagePullPolicy: Always
        ports:
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: eas-config
      imagePullSecrets:
      - name: myregistrykey
