k8s/eas-worker.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-worker
  name: eas-worker-dep
spec:
  replicas: 11
  selector:
    matchLabels:
      app: eas-worker
  template:
    metadata:
      labels:
        app: eas-worker
    spec:
      containers:
      - name: eas-worker-pod
        image: index.docker.io/robbilie/eas:eas-node
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
        resources:
          limits:
            memory: "250Mi"
            #cpu: "60m"
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ping
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
      volumes:
      - name: config
        secret:
          secretName: eas-config
      imagePullSecrets:
      - name: myregistrykey
