k8s/api.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eas-api-service
  labels:
    app: eas-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4001
    protocol: TCP
  selector:
    app: eas-api
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-api
  name: eas-api-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eas-api
  template:
    metadata:
      labels:
        app: eas-api
    spec:
      containers:
      - name: eas-api-pod
        image: robbilie/space.utils-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
        resources:
          limits:
            memory: "200Mi"
            cpu: "70m"
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /api-docs
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /alliances/434243723/ # C C P Alliance
            port: 4001
          initialDelaySeconds: 60
          timeoutSeconds: 60
      volumes:
      - name: config
        secret:
          secretName: eas-config
      nodeSelector:
        kubernetes.io/hostname: "sheliak"
