k8s/eas-api.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eas-api-service
  labels:
    app: eas-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4001
    protocol: TCP
  selector:
    app: eas-api
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-api
  name: eas-api-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eas-api
  template:
    metadata:
      labels:
        app: eas-api
    spec:
      containers:
      - name: eas-api-pod
        image: index.docker.io/robbilie/eas:eas-node
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
        resources:
          limits:
            memory: "512Mi"
            cpu: "75m"
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 4001
          initialDelaySeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: config
        secret:
          secretName: eas-config
      imagePullSecrets:
      - name: myregistrykey
