k8s/eas-ws.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eas-ws-service
  labels:
    app: eas-ws
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4002
    protocol: TCP
  selector:
    app: eas-ws
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-ws
  name: eas-ws-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eas-ws
  template:
    metadata:
      labels:
        app: eas-ws
    spec:
      containers:
      - name: eas-ws-pod
        image: index.docker.io/robbilie/eas:eas-node
        imagePullPolicy: Always
        ports:
        - containerPort: 4002
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: eas-config
      imagePullSecrets:
      - name: myregistrykey
