k8s/taskoplog.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eas-taskoplog-service
  labels:
    app: eas-taskoplog
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4001
    protocol: TCP
  selector:
    app: eas-taskoplog
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-taskoplog
  name: eas-taskoplog-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eas-taskoplog
  template:
    metadata:
      labels:
        app: eas-taskoplog
    spec:
      containers:
      - name: eas-taskoplog-pod
        image: robbilie/space.utils-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 4001
        resources:
          limits:
            memory: "200Mi"
            #cpu: "70m"
        volumeMounts:
        - name: config
          mountPath: "/etc/secrets"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: eas-config
      nodeSelector:
        kubernetes.io/hostname: "sheliak"
      imagePullSecrets:
      - name: myregistrykey
