k8s/ui.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: eas-ui-service
  labels:
    app: eas-ui
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: eas-ui
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: eas-ui
  name: eas-ui-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eas-ui
  template:
    metadata:
      labels:
        app: eas-ui
    spec:
      containers:
      - name: eas-ui-pod
        image: robbilie/space.utils-frontend
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 30
      nodeSelector:
        kubernetes.io/hostname: "sheliak"
      imagePullSecrets:
      - name: myregistrykey
