k8s/eas-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: eas-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.utils.space
    - ws.utils.space
    - utils.space
    secretName: eas-ingress-tls
  rules:
  - host: api.utils.space
    http:
      paths:
      - path: /
        backend:
          serviceName: eas-api-service
          servicePort: 80
  - host: ws.utils.space
    http:
      paths:
      - path: /
        backend:
          serviceName: eas-ws-service
          servicePort: 80
  - host: utils.space
    http:
      paths:
      - path: /
        backend:
          serviceName: eas-static-service
          servicePort: 80
