k8s/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: eas-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - utils.space
    - api.utils.space
    #- ws.utils.space
    secretName: eas-ingress-tls
  rules:
  - host: utils.space
    http:
      paths:
      - path: /
        backend:
          serviceName: eas-ui-service
          servicePort: 80
  - host: api.utils.space
    http:
      paths:
      - path: /
        backend:
          serviceName: eas-api-service
          servicePort: 80
  #- host: ws.utils.space
  #  http:
  #    paths:
  #    - path: /
  #      backend:
  #        serviceName: eas-ws-service
  #        servicePort: 80
